# DSS

Homework10/: exercise_10_SOLUTION.ipynb  fun2.py  functions.py  homework10.ipynb  pyproject.toml
Homework11/: exercise_11_solution.ipynb  homework11.ipynb  pyproject.toml
Homework3/: homewrk3.ipynb  pyproject.toml
Homework4/: DSSS_Ex_4_solution.ipynb  Homework_4.ipynb  pyproject.toml
Homework7/: Exercise_7_solution.ipynb  homework7.ipynb  pyproject.toml
homework2/: Ex_2_solution.ipynb  Homework2.ipynb  pyproject.toml  saved_image.tif  video_metadata_example.json
homework6/: Ex6_solution.py  homework6_aicha_cheridi.py  pyproject.toml  settings.json  tesss.py
homework8/: Exercise_8_solution copy.ipynb  Exercise_8_solution.ipynb  pyproject.toml
