[tool.poetry]
name = "homwrk10"
version = "0.1.0"
description = ""
authors = ["Aicha-cher <ai0685@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.3"
line-profiler = "^4.0.2"
ray = "^2.2.0"
scikit-image = "^0.19.3"
opencv-python = "^4.7.0.68"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
