[tool.poetry]
name = "dsss"
version = "0.1.0"
description = ""
authors = ["aicha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
seaborn = "^0.12.1"
dexplot = "^0.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
