[tool.poetry]
name = "dss"
version = "0.1.0"
description = ""
authors = ["aica"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
pandas-profiling = "^3.5.0"
nutil = {git = "https://github.com/anki-xyz/nutil"}



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
