[tool.poetry]
name = "homework7"
version = "0.1.0"
description = ""
authors = ["Aicha-cher <ai0685@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

numpy = "^1.23.5"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
seaborn = "^0.12.1"
ipywidgets = "^8.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
