[tool.poetry]
name = "DSSS"
version = "0.1.0"
description = "for DSSS homeworks"
authors = ["aicha_cheridi"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
imageio = {extras = ["ffmpeg"], version = "^2.22.4"}
opencv-python = "^4.6.0"
scikit-image = "^0.19.3"
scikit-video = "^1.1.11"
av = "^10.0.0"
ffmpeg = "^1.4"
ipywidgets = "^8.0.2"
flammkuchen = "^1.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
