[tool.poetry]
name = "dss-hmwork-8"
version = "0.1.0"
description = ""
authors = ["aicha"]
readme = "README.md"
packages = [{include = "dss_hmwork_8"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow-metal = "^0.5.0"
tensorflow-macos = "2.9.0"
tensorflow-datasets = "^4.8.1"
scikit-learn = "^1.2.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
